--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -1,4 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#AB2C14" />
-    <corners android:radius="15dp" />  <!-- Radio de las esquinas redondeadas -->
+    <corners android:radius="15dp" />
+
 </shape>
