--- a/app/src/main/res/layout/menu_principal.xml
+++ b/app/src/main/res/layout/menu_principal.xml
@@ -33,25 +33,16 @@
     <SearchView
         android:id="@+id/sv_buscador_comida"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="80dp"
         android:layout_marginEnd="16dp"
         android:layout_weight="1"
         android:background="#5BB0A9AB"
+        android:overScrollMode="ifContentScrolls"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Qué estas buscando?"
-            android:visibility="visible"
-            tools:visibility="visible" />
-    </SearchView>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_tituloMenu"
@@ -60,7 +51,7 @@
         android:layout_marginStart="135dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="135dp"
-        android:text="Ordena tu comida aqui"
+        android:text="@string/titulo_menu"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -69,12 +60,13 @@
         app:layout_constraintTop_toBottomOf="@+id/sv_buscador_comida" />
 
     <TableLayout
+        android:id="@+id/layoutCategorias"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="230dp"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_gravity="center"
-        android:padding="10dp">
+        android:layout_marginTop="230dp"
+        android:padding="10dp"
+        app:layout_constraintTop_toTopOf="parent">
 
         <!-- Fila 1 -->
         <TableRow
@@ -84,25 +76,29 @@
 
             <!-- Botón 1 en la fila 1 -->
             <Button
+                android:id="@+id/btn_postres"
                 android:layout_width="0dp"
-                android:layout_height="80dp"
+                android:layout_height="115dp"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
-                android:background="#AB2C14"
-                android:text="Botón 1"
+                android:background="@drawable/rounded_button"
+                android:onClick="searchPostresClick"
+                android:text="@string/boton_postres"
                 android:textColor="@color/white"
                 android:textStyle="bold" />
 
             <!-- Botón 2 en la fila 1 -->
             <Button
+                android:id="@+id/btn_pizzas"
                 android:layout_width="0dp"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:background="#AB2C14"
-                android:text="Botón 2"
+                android:layout_height="115dp"
                 android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_button"
+                android:text="@string/boton_pizzas"
+
                 android:textColor="@color/white"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
         </TableRow>
 
         <!-- Fila 2 -->
@@ -113,25 +109,27 @@
 
             <!-- Botón 1 en la fila 2 -->
             <Button
+                android:id="@+id/btn_parrillas"
                 android:layout_width="0dp"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:background="#AB2C14"
-                android:text="Botón 3"
+                android:layout_height="115dp"
                 android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_button"
+                android:text="@string/boton_parrillas"
                 android:textColor="@color/white"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <!-- Botón 2 en la fila 2 -->
             <Button
+                android:id="@+id/btn_hamburgesas"
                 android:layout_width="0dp"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:background="#AB2C14"
-                android:text="Botón 4"
+                android:layout_height="115dp"
                 android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_button"
+                android:text="@string/boton_hamburgesas"
                 android:textColor="@color/white"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
         </TableRow>
 
         <!-- Fila 3 -->
@@ -142,25 +140,27 @@
 
             <!-- Botón 1 en la fila 3 -->
             <Button
+                android:id="@+id/btn_panaderia"
                 android:layout_width="0dp"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:background="#AB2C14"
-                android:text="Botón 5"
+                android:layout_height="115dp"
                 android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_button"
+                android:text="@string/boton_panaderia"
                 android:textColor="@color/white"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
             <!-- Botón 2 en la fila 3 -->
             <Button
+                android:id="@+id/btn_helados"
                 android:layout_width="0dp"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:background="#AB2C14"
-                android:text="Botón 6"
+                android:layout_height="115dp"
                 android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_button"
+                android:text="@string/boton_helados"
                 android:textColor="@color/white"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
         </TableRow>
     </TableLayout>
 
