fix: error en AndroidManifest corregido para hacer posible que la activity MenuOpciones corra bien

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,6 +2,7 @@
 <resources>
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Define el color de texto primario (colorPrimary) -->
+        <item name="android:windowBackground">@android:color/white</item>
         <item name="android:textColorPrimary">@color/white</item>
         <!-- Otros estilos personalizados -->
     </style>
