--- a/app/src/main/res/layout/activity_menu_opciones.xml
+++ b/app/src/main/res/layout/activity_menu_opciones.xml
@@ -7,10 +7,15 @@
     android:background="@color/white">
 
     <LinearLayout
+        android:id="@+id/layoutHeader"
         android:layout_width="409dp"
         android:layout_height="33dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="24dp"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/layoutBuscador"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -22,6 +27,11 @@
             android:layout_weight="1"
             android:src="@drawable/burger_menu" />
 
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
         <ImageView
             android:id="@+id/img_cart"
             android:layout_width="25dp"
@@ -31,46 +41,18 @@
 
     </LinearLayout>
 
-    <SearchView
-        android:id="@+id/sv_buscador_comida"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="16dp"
-        android:layout_weight="1"
-        android:background="#5BB0A9AB"
-        android:overScrollMode="ifContentScrolls"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_tituloMenu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="135dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="135dp"
-        android:text="@string/titulo_menu"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sv_buscador_comida" />
-
     <TableLayout
         android:id="@+id/layoutCategorias"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="230dp"
+        android:layout_marginTop="200dp"
         android:padding="10dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <!-- Fila 1 -->
         <TableRow
+            android:id="@+id/trCategorias1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp">
@@ -104,6 +86,7 @@
 
         <!-- Fila 2 -->
         <TableRow
+            android:id="@+id/trCategorias2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp">
@@ -135,6 +118,7 @@
 
         <!-- Fila 3 -->
         <TableRow
+            android:id="@+id/trCategorias3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp">
@@ -164,5 +148,55 @@
                 android:textStyle="bold" />
         </TableRow>
     </TableLayout>
+
+    <LinearLayout
+        android:id="@+id/layoutBuscador"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layoutHeader">
+
+        <FrameLayout
+            android:id="@+id/flBuscador"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#5BB0A9AB">
+
+            <EditText
+                android:id="@+id/etBuscador"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@android:color/transparent"
+                android:enabled="false"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:hint="¿Qué estás buscando?"
+                android:inputType="none"
+                android:textAlignment="center"
+                android:textSize="15sp" />
+
+        </FrameLayout>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/tvTituloMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="46dp"
+        android:text="@string/titulo_menu"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/layoutCategorias"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/layoutBuscador" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
