--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="color_principal">#AB2C14</color>
-    <color name="grey">#8F8E8E</color>
+    <color name="grey">#A6A6A6</color>
 </resources>
