--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,9 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#F6E8E8</color>
     <color name="color_principal">#AB2C14</color>
+    <color name="color_botones_bg">#AB2C14</color>
+    <color name="color_botones_txt">#FFF6E8E8</color>
     <color name="grey">#A6A6A6</color>
 </resources>
